did ampm range-sliders

--- a/src/pug/pages/2022-edit-b-profile-2.pug
+++ b/src/pug/pages/2022-edit-b-profile-2.pug
@@ -57,7 +57,8 @@ block content
             //- begin edit-b-profile__item--schedule
             .edit-b-profile__item.edit-b-profile__item--schedule
               .edit-b-profile__item-title Office hours
-              include ../elements/slider-range-list
+              //-include ../elements/slider-range-list
+              include ../elements/2022-slider-range-list-ampm
             //- end edit-b-profile__item--schedule
 
             //.edit-b-profile__item-wrap
