--- a/src/style2/app2.scss
+++ b/src/style2/app2.scss
@@ -13,9 +13,11 @@
 @import "pages/2022-edit-profile";
 @import "pages/2022-results";
 
-
 //sections
 @import "sections/2022-popup";
 @import "sections/2022-index-top";
 @import "sections/2022-index-about";
 @import "sections/2022-index-download";
+
+//elements
+@import "elements/slider-range-list-ampm";
