--- a/src/style2/pages/_2022-edit-profile.scss
+++ b/src/style2/pages/_2022-edit-profile.scss
@@ -291,6 +291,10 @@
   img {
     display: block;
     width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+    object-position: center;
   }
 }
 
