--- a/src/style2/core/_2022-07-edits.scss
+++ b/src/style2/core/_2022-07-edits.scss
@@ -2,11 +2,16 @@
   padding-bottom: 30px;
 }
 
-.profile-person-row__left,
-.profile-person-row__right {
+.profile-clinic__left,
+.profile-clinic__right,
+.profile-person__left,
+.profile-person__right {
   overflow: hidden;
 }
 
+.profile-clinic__title,
+.profile-clinic__subtitle,
+.profile-clinic__contacts-link,
 .profile-person__title,
 .profile-person__subtitle,
 .profile-person__contacts-link {
@@ -20,4 +25,44 @@
     //white-space: nowrap;
     text-overflow: ellipsis;
   }
+}
+
+.person-card__ava--business,
+.person-card__ava--person {
+  position: relative;
+  overflow: visible;
+
+  &.verificated {
+    &::before {
+      opacity: 1;
+    }
+  }
+
+  &::before {
+    position: absolute;
+    right: 3px;
+    bottom: 3px;
+    width: 16px;
+    height: 16px;
+    content: '';
+    opacity: 0;
+    background-image: url('../img/verificated.png');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+
+    @include min(981) {
+      right: 13px;
+      bottom: 13px;
+      width: 26px;
+      height: 26px;
+    }
+  }
+}
+
+.person-card__ava-img {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
