--- a/src/style2/core/_2022-07-edits.scss
+++ b/src/style2/core/_2022-07-edits.scss
@@ -14,7 +14,8 @@
 .profile-clinic__contacts-link,
 .profile-person__title,
 .profile-person__subtitle,
-.profile-person__contacts-link {
+.profile-person__contacts-link,
+.subscription-info__text {
   overflow: hidden;
   max-width: 100%;
   //white-space: nowrap;
@@ -65,4 +66,10 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
+}
+
+.button {
+  &.disabled {
+    pointer-events: none;
+  }
 }
