--- a/src/pug/pages/2022-edit-b-profile-4.pug
+++ b/src/pug/pages/2022-edit-b-profile-4.pug
@@ -91,6 +91,7 @@ block content
                     use(xlink:href="assets/img/sprite.svg#shield")
                 span.form-group__text Upload License
                 input.form-control(type='file')
+                .form-group__delete-file Delete license
               //end form-group
 
               //begin form-group
@@ -100,6 +101,7 @@ block content
                     use(xlink:href="assets/img/sprite.svg#list")
                 span.form-group__text Upload Resume
                 input.form-control(type='file')
+                .form-group__delete-file Delete resume
               //end form-group
 
 
