--- a/src/pug/sections/popup.pug
+++ b/src/pug/sections/popup.pug
@@ -19,6 +19,10 @@
           .popup-review__rait
             include ../elements/rating
       .popup-review__descr
+        p methodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologies
+        p methodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologies
+        p methodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologies
+        p methodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologiesmethodologies
         p Text review our proven recruitment and training methodologies enable us to offer cost-effective permanent and temporary staffing in the US that meets your clinic and office needs.Nothing should stop you from unlocking you and your dental offices maximum potential. Tempeak is known for the highest standards of timeliness, professionalism, and respect. We unite quality dental professionals with successful dental practices.
     //- end   popup-review__item
 
