--- a/src/style2/core/_2022-07-edits.scss
+++ b/src/style2/core/_2022-07-edits.scss
@@ -28,6 +28,8 @@
   }
 }
 
+.profile-person-ava__pic,
+.profile-clinic-ava__pic,
 .person-card__ava,
 .person-card__ava--business,
 .person-card__ava--person {
