--- a/src/style2/sections/_2022-popup.scss
+++ b/src/style2/sections/_2022-popup.scss
@@ -158,4 +158,11 @@
   font-weight: 300;
   line-height: 21px;
   margin-bottom: 16px;
+  p,
+  span {
+    display: block;
+    overflow: hidden;
+    max-width: 100%;
+    text-overflow: ellipsis;
+  }
 }
