--- a/src/pug/pages/request-clinic-1.pug
+++ b/src/pug/pages/request-clinic-1.pug
@@ -18,9 +18,10 @@ block content
       .container.container-inn.container-inn--sm
         //begin profile-clinic__left
         .profile-clinic__left
-          .profile-clinic__ava.profile-clinic-ava
-            .profile-clinic-ava__pic
-              img(src="assets/img/clinic-logo.jpg" alt="picture")
+          .profile-clinic__ava.profile-clinic-ava.verificated
+            .person-card__ava-img
+              img(src="https://dev.yomochka.pp.ua/files/logos/bo/SSrL2gc0wNYFLWgoHMkgSQzcIhE81xh2nM03YYrW.jpg" alt="picture")
+              //img(src="assets/img/clinic-logo.jpg" alt="picture")
         //end profile-clinic__left
 
         //begin profile-clinic__right
